<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExperienceActivity">

    <TextView
        android:id="@+id/hrehorciuc_mara_add_experience_experience_tv_complete"
        android:layout_margin="8dp"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:text="@string/hrehorciuc_mara_impartasiti_experienta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hrehorciuc_mara_add_experience_til_name"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_experience_tv_complete"

        android:layout_margin="8dp"
        android:layout_marginTop="50dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/hrehorciuc_mara_add_experience_tiet_name"
            android:hint="@string/hrehorciuc_mara_nume"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:minHeight="56dp"
            android:padding="12dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/hrehorciuc_mara_add_experience_tv_disaster_type"
        android:layout_margin="8dp"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_til_name"

        android:text="@string/hrehorciuc_mara_tip_dezastru"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/hrehorciuc_mara_add_experience_spn_disaster_type"

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:entries="@array/hrehorciuc_mara_add_experience_disaster_types"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_tv_disaster_type" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hrehorciuc_mara_add_experience_til_description"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_spn_disaster_type"
        android:layout_margin="8dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/hrehorciuc_mara_add_experience_tiet_description"
            android:hint="@string/hrehorciuc_mara_descriere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:minHeight="56dp"
            android:padding="12dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/hrehorciuc_mara_add_experience_tv_loss"
        android:layout_margin="8dp"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_til_description"

        android:text="@string/hrehorciuc_mara_ce_tip_de_daune_ati_suferit"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/hrehorciuc_mara_add_experience_cb_home"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hrehorciuc_mara_la_nivel_de_locuinta"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/hrehorciuc_mara_add_experience_cb_car"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_tv_loss"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"/>

    <CheckBox
        android:id="@+id/hrehorciuc_mara_add_experience_cb_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hrehorciuc_mara_la_nivel_de_autovehicul"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/hrehorciuc_mara_add_experience_cb_another"
        app:layout_constraintStart_toEndOf="@+id/hrehorciuc_mara_add_experience_cb_home"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_tv_loss"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"/>

    <CheckBox
        android:id="@+id/hrehorciuc_mara_add_experience_cb_another"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hrehorciuc_mara_altele"
        android:textColor="@color/white"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hrehorciuc_mara_add_experience_cb_car"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_tv_loss"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/hrehorciuc_mara_add_experience_tv_loss_level"
        android:layout_margin="8dp"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_cb_car"

        android:text="@string/hrehorciuc_mara_nivelul_daunelor_suferite"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/hrehorciuc_mara_add_experience_rg_loss_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_tv_loss_level"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3" >

        <RadioButton
            android:id="@+id/hrehorciuc_mara_add_experience_rb_minor_loss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/hrehorciuc_mara_mici"
            android:textColor="@color/white"
            android:layout_marginEnd="4dp"/>

        <RadioButton
            android:id="@+id/hrehorciuc_mara_add_experience_rb_mediocre_loss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hrehorciuc_mara_medii"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"/>

        <RadioButton
            android:id="@+id/hrehorciuc_mara_add_experience_rb_severe_loss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hrehorciuc_mara_mari"
            android:textColor="@color/white"
            android:layout_marginStart="4dp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/hrehorciuc_mara_add_experience_tv_effect"
        android:layout_margin="8dp"
        android:textSize="18sp"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_rg_loss_level"

        android:text="@string/hrehorciuc_mara_afectat_emotional_de_eveniment"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/hrehorciuc_mara_add_experience_rg_effect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_tv_effect"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3" >

        <RadioButton
            android:id="@+id/hrehorciuc_mara_add_experience_rb_gentle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/hrehorciuc_mara_usor"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"/>

        <RadioButton
            android:id="@+id/hrehorciuc_mara_add_experience_rb_mediocre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hrehorciuc_mara_moderat"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"/>

        <RadioButton
            android:id="@+id/hrehorciuc_mara_add_experience_rb_severely"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hrehorciuc_mara_sever"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginStart="4dp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/hrehorciuc_mara_add_experience_tv_prepared"
        android:layout_margin="8dp"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_rg_effect"

        android:text="@string/hrehorciuc_mara_pregatit_de_acest_dezastru"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/hrehorciuc_mara_add_experience_spn_prepared"

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:entries="@array/hrehorciuc_mara_add_experience_preparations"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hrehorciuc_mara_add_experience_tv_prepared" />


    <Button
        android:id="@+id/hrehorciuc_mara_add_experience_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/hrehorciuc_mara_trimite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>